--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,19 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.nav-bar{
+  display:grid;
+  grid-template-areas: 
+    "b a";
+  margin-top:40;
+  background-color:#abc;
+}
+.nav-bar>h3{
+  grid-area:a;
+  
+}
+.nav-bar>h1{
+  grid-area:b;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
